fix: fixed overflow issue

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -35,6 +35,7 @@ body {
   font-family: 'Avenir', sans-serif;
   background-color: #fffcf9;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .container {
